b=578938; ANGLE compilation broken for non-libxul shared builds; r=khuey